[package]
name = "lemon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
async-io = "1.10.0"
futures = "0.3.25"
chrono = "0.4"
sysinfo = "0.26"